src/objects/CareProgramMiddleEarth__c.object
<CustomObject>
    <description>Used to bring together the CARE Program code and the PAMS program code together.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationTitle__c</fullName>
        <label>Application Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerProgramCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner Program Code</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>CARE Programs Middle Earth</relationshipLabel>
        <relationshipName>CAREProgramsMiddleEarth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BannerTitle__c</fullName>
        <formula>BannerProgramCode__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREProgramCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CARE Program Code</label>
        <referenceTo>CAREProgram__c</referenceTo>
        <relationshipLabel>CARE Programs Middle Earth</relationshipLabel>
        <relationshipName>CAREProgramsMiddleEarth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAREProgramTitle__c</fullName>
        <formula>CAREProgramCode__r.ProgramLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARE Program Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this program on the Inquiry form?</inlineHelpText>
        <label>Inquiry Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this CAREProgramMiddleEarth__c record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramGroups__c</fullName>
        <label>Program Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (initial teaching licensure programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (programs for current teachers and others)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramTitle__c</fullName>
        <formula>BannerProgramCode__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Title</label>
        <type>Text</type>
    </fields>
    <label>CARE Program Middle Earth</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ApplicationBusinessPrograms</fullName>
        <columns>NAME</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>BannerTitle__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <label>Business Programs - Application</label>
    </listViews>
    <listViews>
        <fullName>ApplicationHealthPrograms</fullName>
        <columns>NAME</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Nursing</value>
        </filters>
        <filters>
            <field>BannerTitle__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <label>Health Programs - Application</label>
    </listViews>
    <listViews>
        <fullName>ApplicationITPrograms</fullName>
        <columns>NAME</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Information Technology</value>
        </filters>
        <filters>
            <field>BannerTitle__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <label>IT Programs - Application</label>
    </listViews>
    <listViews>
        <fullName>ApplicationPrograms</fullName>
        <columns>NAME</columns>
        <columns>ProgramGroups__c</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>ApplicationTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>startsWith</operation>
            <value>Education,Business,Information Technology,Nursing</value>
        </filters>
        <filters>
            <field>BannerTitle__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Current Application Programs</label>
    </listViews>
    <listViews>
        <fullName>ApplicationTeachingPrograms</fullName>
        <columns>NAME</columns>
        <columns>BannerProgramCode__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>startsWith</operation>
            <value>Education</value>
        </filters>
        <filters>
            <field>BannerTitle__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Teaching Programs - Application</label>
    </listViews>
    <listViews>
        <fullName>BusinessPrograms</fullName>
        <columns>NAME</columns>
        <columns>ProgramTitle__c</columns>
        <columns>Active__c</columns>
        <columns>ApplicationTitle__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>InquiryProgram__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <label>Business Programs</label>
    </listViews>
    <listViews>
        <fullName>CurrentInquiryPrograms</fullName>
        <columns>NAME</columns>
        <columns>ProgramGroups__c</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Current Inquiry Programs</label>
    </listViews>
    <listViews>
        <fullName>ITPrograms</fullName>
        <columns>NAME</columns>
        <columns>ProgramTitle__c</columns>
        <columns>Active__c</columns>
        <columns>ApplicationTitle__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>InquiryProgram__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Information Technology</value>
        </filters>
        <label>IT Programs</label>
    </listViews>
    <listViews>
        <fullName>InquiryBusinessPrograms</fullName>
        <columns>NAME</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Programs - Inquiry</label>
    </listViews>
    <listViews>
        <fullName>InquiryITPrograms</fullName>
        <columns>NAME</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Information Technology</value>
        </filters>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IT Programs - Inquiry</label>
    </listViews>
    <listViews>
        <fullName>InquiryLicensurePrograms</fullName>
        <columns>NAME</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Education (initial teaching licensure programs)</value>
        </filters>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Licensure Programs - Inquiry</label>
    </listViews>
    <listViews>
        <fullName>InquiryNusringPrograms</fullName>
        <columns>NAME</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Nursing</value>
        </filters>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Nursing Programs - Inquiry</label>
    </listViews>
    <listViews>
        <fullName>InquiryTeacherPrograms</fullName>
        <columns>NAME</columns>
        <columns>CAREProgramCode__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Education (programs for current teachers and others)</value>
        </filters>
        <filters>
            <field>InquiryProgram__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Teacher Programs - Inquiry</label>
    </listViews>
    <listViews>
        <fullName>NursingPrograms</fullName>
        <columns>NAME</columns>
        <columns>ProgramTitle__c</columns>
        <columns>Active__c</columns>
        <columns>ApplicationTitle__c</columns>
        <columns>BannerTitle__c</columns>
        <columns>CAREProgramTitle__c</columns>
        <columns>InquiryProgram__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramGroups__c</field>
            <operation>equals</operation>
            <value>Nursing</value>
        </filters>
        <label>Nursing Programs</label>
    </listViews>
    <nameField>
        <label>Program Middle Earth Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Opportunity_00N30000009R7XiEAK</fullName>
        <active>true</active>
        <field>Opportunity.MarketingProgram__c</field>
        <filterItems>
            <field>CareProgramMiddleEarth__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_Marketing Program</name>
    </namedFilters>
    <pluralLabel>CARE Programs Middle Earth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>